--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -25,4 +25,13 @@
     <span>Additional Features</span>
     <dd>{{phone.additionalFeatures}}</dd>
   </li>
+  <p></p>
+    <li>
+    <dl>
+      <dt>Infrared</dt>
+      <dd>{{phone.connectivity.infrared | checkmark}}</dd>
+      <dt>GPS</dt>
+      <dd>{{phone.connectivity.gps | checkmark}}</dd>
+    </dl>
+    </li>
 </ul>
