--- a/app/partials/phone-detail.html
+++ b/app/partials/phone-detail.html
@@ -1,8 +1,8 @@
 <img ng-src="{{mainImageUrl}}" class="phone">
 
-<h1>{{$ctrl.phone.name}}</h1>
+<h1>{{phone.name}}</h1>
 
-<p>{{$ctrl.phone.description}}</p>
+<p>{{phone.description}}</p>
 
 <ul class="phone-thumbs">
   <li ng-repeat="img in phone.images">
@@ -15,99 +15,99 @@
     <span>Availability and Networks</span>
     <dl>
       <dt>Availability</dt>
-      <dd ng-repeat="availability in $ctrl.phone.availability">{{availability}}</dd>
+      <dd ng-repeat="availability in phone.availability">{{availability}}</dd>
     </dl>
   </li>
   <li>
     <span>Battery</span>
     <dl>
       <dt>Type</dt>
-      <dd>{{$ctrl.phone.battery.type}}</dd>
+      <dd>{{phone.battery.type}}</dd>
       <dt>Talk Time</dt>
-      <dd>{{$ctrl.phone.battery.talkTime}}</dd>
+      <dd>{{phone.battery.talkTime}}</dd>
       <dt>Standby time (max)</dt>
-      <dd>{{$ctrl.phone.battery.standbyTime}}</dd>
+      <dd>{{phone.battery.standbyTime}}</dd>
     </dl>
   </li>
   <li>
     <span>Storage and Memory</span>
     <dl>
       <dt>RAM</dt>
-      <dd>{{$ctrl.phone.storage.ram}}</dd>
+      <dd>{{phone.storage.ram}}</dd>
       <dt>Internal Storage</dt>
-      <dd>{{$ctrl.phone.storage.flash}}</dd>
+      <dd>{{phone.storage.flash}}</dd>
     </dl>
   </li>
   <li>
     <span>Connectivity</span>
     <dl>
       <dt>Network Support</dt>
-      <dd>{{$ctrl.phone.connectivity.cell}}</dd>
+      <dd>{{phone.connectivity.cell}}</dd>
       <dt>WiFi</dt>
-      <dd>{{$ctrl.phone.connectivity.wifi}}</dd>
+      <dd>{{phone.connectivity.wifi}}</dd>
       <dt>Bluetooth</dt>
-      <dd>{{$ctrl.phone.connectivity.bluetooth}}</dd>
+      <dd>{{phone.connectivity.bluetooth}}</dd>
       <dt>Infrared</dt>
-      <dd>{{$ctrl.phone.connectivity.infrared | checkmark}}</dd>
+      <dd>{{phone.connectivity.infrared | checkmark}}</dd>
       <dt>GPS</dt>
-      <dd>{{$ctrl.phone.connectivity.gps | checkmark}}</dd>
+      <dd>{{phone.connectivity.gps | checkmark}}</dd>
     </dl>
   </li>
   <li>
     <span>Android</span>
     <dl>
       <dt>OS Version</dt>
-      <dd>{{$ctrl.phone.android.os}}</dd>
+      <dd>{{phone.android.os}}</dd>
       <dt>UI</dt>
-      <dd>{{$ctrl.phone.android.ui}}</dd>
+      <dd>{{phone.android.ui}}</dd>
     </dl>
   </li>
   <li>
     <span>Size and Weight</span>
     <dl>
       <dt>Dimensions</dt>
-      <dd ng-repeat="dim in $ctrl.phone.sizeAndWeight.dimensions">{{dim}}</dd>
+      <dd ng-repeat="dim in phone.sizeAndWeight.dimensions">{{dim}}</dd>
       <dt>Weight</dt>
-      <dd>{{$ctrl.phone.sizeAndWeight.weight}}</dd>
+      <dd>{{phone.sizeAndWeight.weight}}</dd>
     </dl>
   </li>
   <li>
     <span>Display</span>
     <dl>
       <dt>Screen size</dt>
-      <dd>{{$ctrl.phone.display.screenSize}}</dd>
+      <dd>{{phone.display.screenSize}}</dd>
       <dt>Screen resolution</dt>
-      <dd>{{$ctrl.phone.display.screenResolution}}</dd>
+      <dd>{{phone.display.screenResolution}}</dd>
       <dt>Touch screen</dt>
-      <dd>{{$ctrl.phone.display.touchScreen | checkmark}}</dd>
+      <dd>{{phone.display.touchScreen | checkmark}}</dd>
     </dl>
   </li>
   <li>
     <span>Hardware</span>
     <dl>
       <dt>CPU</dt>
-      <dd>{{$ctrl.phone.hardware.cpu}}</dd>
+      <dd>{{phone.hardware.cpu}}</dd>
       <dt>USB</dt>
-      <dd>{{$ctrl.phone.hardware.usb}}</dd>
+      <dd>{{phone.hardware.usb}}</dd>
       <dt>Audio / headphone jack</dt>
-      <dd>{{$ctrl.phone.hardware.audioJack}}</dd>
+      <dd>{{phone.hardware.audioJack}}</dd>
       <dt>FM Radio</dt>
-      <dd>{{$ctrl.phone.hardware.fmRadio | checkmark}}</dd>
+      <dd>{{phone.hardware.fmRadio | checkmark}}</dd>
       <dt>Accelerometer</dt>
-      <dd>{{$ctrl.phone.hardware.accelerometer | checkmark}}</dd>
+      <dd>{{phone.hardware.accelerometer | checkmark}}</dd>
     </dl>
   </li>
   <li>
     <span>Camera</span>
     <dl>
       <dt>Primary</dt>
-      <dd>{{$ctrl.phone.camera.primary}}</dd>
+      <dd>{{phone.camera.primary}}</dd>
       <dt>Features</dt>
-      <dd>{{$ctrl.phone.camera.features.join(', ')}}</dd>
+      <dd>{{phone.camera.features.join(', ')}}</dd>
     </dl>
   </li>
   <li>
     <span>Additional Features</span>
-    <dd>{{$ctrl.phone.additionalFeatures}}</dd>
+    <dd>{{phone.additionalFeatures}}</dd>
   </li>
 </ul>
